fix: icon spacing

--- a/src/components/Careers/Positions/styles.module.css
+++ b/src/components/Careers/Positions/styles.module.css
@@ -35,6 +35,10 @@
   margin-bottom: auto;
 }
 
+.icon {
+  margin-right: 4px;
+}
+
 .position {
   margin-bottom: 10.5px;
 }
